--- a/notebooks/6-regression-marginal-effects.nb.html
+++ b/notebooks/6-regression-marginal-effects.nb.html
@@ -1771,11 +1771,18 @@ $(document).ready(function () {
 <h1>load packages</h1>
 <!-- rnb-text-end -->
 <!-- rnb-chunk-begin -->
-<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShtYXJnaW5zKVxubGlicmFyeShnZ2VmZmVjdHMpXG5saWJyYXJ5KGVmZmVjdHMpXG5saWJyYXJ5KGdncGxvdDIpXG5saWJyYXJ5KGhhdmVuKVxuYGBgIn0= -->
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShtYXJnaW5zKVxubGlicmFyeShnZ2VmZmVjdHMpXG5saWJyYXJ5KGVmZmVjdHMpXG5gYGAifQ== -->
 <pre class="r"><code>library(margins)
 library(ggeffects)
-library(effects)
-library(ggplot2)
+library(effects)</code></pre>
+<!-- rnb-source-end -->
+<!-- rnb-output-begin eyJkYXRhIjoiTG9hZGluZyByZXF1aXJlZCBwYWNrYWdlOiBjYXJEYXRhXG5sYXR0aWNlIHRoZW1lIHNldCBieSBlZmZlY3RzVGhlbWUoKVxuU2VlID9lZmZlY3RzVGhlbWUgZm9yIGRldGFpbHMuXG4ifQ== -->
+<pre><code>Loading required package: carData
+lattice theme set by effectsTheme()
+See ?effectsTheme for details.</code></pre>
+<!-- rnb-output-end -->
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxubGlicmFyeShnZ3Bsb3QyKVxubGlicmFyeShoYXZlbilcbmBgYCJ9 -->
+<pre class="r"><code>library(ggplot2)
 library(haven)</code></pre>
 <!-- rnb-source-end -->
 <!-- rnb-chunk-end -->
